# Project-Travels

Client-Front/client/: package-lock.json  package.json
Client-Front/client/src/: App.vue  Global.js  main.js
Client-Front/client/src/components/: Busqueda.vue  Cabecera.vue
Client-Front/client/src/router/: index.js
Client-Front/client/src/views/: Busqueda.vue  Contacto.vue  Home.vue
travels/: .gitignore  pyproject.toml
travels/tests/: test_travels.py
travels/viajes/server/: users\publics\desktop\project	ravelsiajes\database.db
travels/viajes/server/fixtures/: asiento.json  boleto.json  bus.json  terminal.json  trayecto.json  usuario.json
travels/viajes/server/restapi/: admin.py  models.py  serializer.py  views.py
travels/viajes/server/restapi/migrations/: 0001_initial.py
travels/viajes/server/server/: settings.py  urls.py
